# dispatchr

./: Cargo.toml  LICENSE-MIT.md  LICENSE.md  NOTICE  README.md
.github/workflows/: ci.yaml
benches/: dispatch_read.rs
src/: block_impl.rs  data.rs  external_data.rs  io.rs  lib.rs  qos.rs  queue.rs  semaphore.rs  source.rs  time.rs
tests/main_sync/: main.rs
