[package]
name = "dispatchr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]


[dependencies]
blocksr = {git = "https://github.com/drewcrawford/blocksr.git"}
libc = "~0"
[dev-dependencies]
criterion = "0.3"

[[test]]
name = "main_sync"
harness = false

[[bench]]
name = "dispatch_read"
harness = false
