[package]
name = "dispatchr"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# declare our types as arguable in objr.  This is useful in cases where we don't want to pass the bridge type for some reason.
bridge = ["objr"]

[dependencies]
#blocksr = {path = "../blocksr"}
blocksr = "~1"
libc = "~0"
objr = {version = "~1",optional=true}
priority = {version = "~0"}

[dev-dependencies]
criterion = "0.3"

[[test]]
name = "main_sync"
harness = false

[[bench]]
name = "dispatch_read"
harness = false
