[package]
name = "dispatchr"
version = "1.0.0"
authors = ["Drew Crawford <drew@sealedabstract.com>"]
description = "Drew's Rust bindings for libdispatch, a.k.a. GCD"
homepage = "https://sealedabstract.com/code/dispatchr"
repository = "https://github.com/drewcrawford/dispatchr"
license = "MIT OR Apache-2.0"
keywords = ["libdispatch","gcd","dispatch","macos","apple"]
categories = ["os::macos-apis", "external-ffi-bindings"]
rust-version = "1.60.0"

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# declare our types as arguable in objr.  This is useful in cases where we don't want to pass the bridge type for some reason.
bridge = ["objr"]

[dependencies]
#blocksr = {path = "../blocksr"}
blocksr = "~1"
libc = "~0"
objr = {version = "~1",optional=true}
priority = {version = "~0"}

[dev-dependencies]
criterion = "0.3"

[[test]]
name = "main_sync"
harness = false

[[bench]]
name = "dispatch_read"
harness = false
